tests/error/modifier_errors/captured_var_inout_reassign.err
Error: Drop violation (at $FILE:12:4)
   | 
10 | @guppy
11 | def test() -> None:
12 |     a = qubit()
   |     ^ Variable `a` with non-droppable type `qubit` is leaked

Help: Make sure that `a` is consumed or returned to avoid the leak

Guppy compilation failed due to 1 previous error
